--- a/css/style1.css
+++ b/css/style1.css
@@ -106,7 +106,7 @@ h3{
 	background: #f4dcc1;
 }
 
-.row .method h5{
+.method h5{
 	font-family:'Libre Baskerville';
 	font-style: italic;
 	text-transform: uppercase;
